# thermal-oracle

./: .gitignore  README.md  justfile
agent/: README.md  pyproject.toml
agent/tests/: test_lhm_parser.py  test_pairing.py  test_sampler.py  test_shipper.py  test_spool.py
agent/tests/data/: lhm_sample.json
agent/thermal_agent/: __main__.py  cli.py  config.py  models.py  pairing.py  sampler.py  shipper.py  spool.py  win_foreground.py
agent/thermal_agent/collectors/: base.py  windows_lhm.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core.py  0002_telemetry.py  0003_caggs.py  0004_analytics.py  0005_analytics_state.py  0006_pairing.py  0007_maintenance_kinds.py  0008_regime_change.py  0009_open_sessions.py
backend/app/: cli.py  logging.py  main.py  middleware.py  security.py  settings.py
backend/app/analytics/: ambient.py  jobs.py  params.py  rth.py  series.py  trend.py  windows.py  worker.py
backend/app/api/: ingest.py  pairing.py  system.py
backend/app/api/v1/: __init__.py  auth.py  deps.py  devices.py
backend/app/schemas/: devices.py  telemetry.py  users.py
backend/app/services/: ingest_service.py  pairing_service.py  token_service.py
backend/tests/: test_pairing_codes.py  test_sanitize.py  test_schemas.py  test_security.py
backend/tests/analytics/: conftest.py  test_ambient.py  test_params.py  test_trend.py  test_windows.py
backend/tests/contract/: test_wire_contract.py
backend/tests/integration/: conftest.py  test_analytics_jobs.py  test_ingest.py  test_maintenance_api.py  test_user_api.py
docs/: architecture.md  smoke-test.md
docs/adr/: 0001-windows-first.md  0002-guided-calibration-in-v2.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  api.ts  types.ts
frontend/src/components/: ui.tsx
infra/: docker-compose.yml
