[project]
name = "thermal-oracle-agent"
version = "0.1.0"
description = "ThermalOracle agent: сбор телеметрии (LibreHardwareMonitor) + SQLite-спул + шиппер"
requires-python = ">=3.11"
# Зависимости минимальны намеренно: пакет ставится на машины пользователей.
# Win32 (активное окно) — через ctypes, TOML-конфиг — через stdlib tomllib.
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
thermal-agent = "thermal_agent.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["thermal_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]
