[project]
name = "thermal-oracle-backend"
version = "0.1.0"
description = "ThermalOracle backend: ingest API, схема TimescaleDB, dev-CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",            # рантайм-доступ к БД (горячий путь, без ORM)
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "sqlalchemy>=2.0,<3",       # только для alembic
    "psycopg[binary]>=3.1",     # только для alembic (sync-драйвер миграций)
    "typer>=0.12",
    "structlog>=24.1",
    "httpx>=0.27",              # dev-CLI send-test-batch
    "numpy>=1.26",              # векторизация аналитики временных рядов
    "apscheduler>=3.10,<4",     # планировщик analytics worker
    "bcrypt>=4.1",              # пароли пользователей (без passlib-обёртки)
    "pyjwt>=2.8",               # JWT user-auth
    "email-validator>=2.0",     # pydantic EmailStr
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/Path/Option в дефолтах аргументов — штатная идиома FastAPI/Typer
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "typer.Option"]
